<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    android:layout_marginBottom="8dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/idImagePost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/imagen_post" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtUserPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/username"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/txtDatePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_post"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="6dp"
                android:orientation="horizontal"
                >

                <ImageButton
                    android:id="@+id/btLike"
                    android:layout_width="20dp"
                    android:layout_height="18dp"

                    android:background="@drawable/ic_baseline_thumb_up_24"
                    android:backgroundTint="#008f39"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:contentDescription="@string/like_button" />

                <TextView
                    android:id="@+id/txtLike"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="2"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="14dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <ImageButton
                    android:id="@+id/btDislike"
                    android:layout_width="20dp"
                    android:layout_height="18dp"

                    android:background="@drawable/ic_baseline_thumb_down_24"
                    android:backgroundTint="#FF0000"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:contentDescription="@string/dislike_button" />

                <TextView
                    android:id="@+id/txtDislike"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="2020"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="14dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

                <TextView
                    android:id="@+id/idUuidLikes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>