<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="2dp"
    android:layout_marginBottom="8dp"
    app:cardPreventCornerOverlap="true"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="10dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/imagen_noticia"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/foxvid" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/txtTitleNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/txtSummaryNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/new_summary"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>